<resources>
    <string name="app_name">AllanProject</string>
    <string name="hello">Hello</string>
    <string name="sign_in_text">Sign into your Account</string>
    <string name="contact_number">Enter Registered Phone Number</string>
    <string name="log_in_otp">LOGIN USING OTP</string>
    <string name="log_in_email">LOGIN VIA EMAIL/SOCIAL PROFILE</string>
    <string name="new_user">New user?<font fgcolor='#008577'><u>Sign Up</u></font></string>
    <string name="enter_email_address">Email Address / User ID</string>
    <string name="password">Password</string>
    <string name="log_in">LOGIN</string>
    <string name="log_in_phone">LOGIN VIA PHONE NUMBER</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_socail_account">Login with you Socail Account</string>
    <string name="send">SEND</string>
    <string name="forgot_text">"Forgetten your Password? Don't worry just type in your Registered Email address and we will take it from there "</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verification_text">"Enter the 4 Digit OTP received on your registered phone number to Verify your number "</string>
    <string name="not_receive">Didn\'t  Receive an OTP ?</string>
    <string name="resend"><u>Resend</u></string>
    <string name="login">Login</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.am fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.am fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.am fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.am fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Register Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_socail">Sign Up wih your Socail Account</string>
    <string name="terms_text"> <font fgcolor='#6FA1D5'>Terms and conditions </font>and</string>
    <string name="privacy_text"><font fgcolor='#6FA1D5'> Privacy Policy</font></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">D.O.B</string>
    <string name="next">Next</string>
    <string name="access">Access</string>
    <string name="access_text">Please allow us to send  you notifications and let us  check your location</string>
    <string name="allow_notification">Allow Notification</string>
    <string name="allow_location_access">Allow Notification Access</string>
    <string name="experience_text">How many years of Experience do you have ?</string>
    <string name="year_experience">Year of experience</string>
    <string name="add_experience">Add Experience</string>
    <string name="bank_info">Bank Info</string>
    <string name="acount_number">Account Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="save">Save</string>
    <string name="training">Training</string>
    <string name="health_document">Health Document</string>
    <string name="add_license">Add License</string>
    <string name="issue_date">Issue Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="select_license">Select Licence</string>
    <string-array name="license_no">
        <item>12344132EFG</item>
        <item>13242424A3F</item>
        <item>13365456B9F</item>
    </string-array>
    <string-array name="state">
        <item>Delhi</item>
        <item>Haryana</item>
        <item>Punjab</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_compact">Select Compact</string>
    <string name="add_photo">Add Photos</string>
    <string name="front">Front</string>
    <string name="add_more_license">Add More License</string>
    <string name="add">Add</string>
    <string name="document_name">Document Name</string>
    <string name="document_type">Document Type</string>
    <string name="back">Back</string>
    <string name="add_document">Add Document</string>
    <string name="document_type_select">Select Document Type</string>
    <string name="certificate">Certification</string>
    <string name="issue_from">Issued From</string>
    <string name="add_certificate">Add Certificate</string>
    <string name="delete"><u><font fgcolor='#4B7BB2'>Delete</font></u></string>
    <string name="heading">What electronic health /medical   record (EMR/EHR) are your familier with ?</string>
    <string name="e_h_r_s">Electronic Health Record System</string>
    <string name="add_ehrs"><u><font fgcolor='#4B7BB2'>Add</font></u></string>
    <string name="active">Active</string>
    <string name="facility_type">Facility Type</string>
    <string name="facility_name">Facility Name</string>
    <string name="experience">Total Exp.</string>
    <string name="edit_experience">Edit Work Experience</string>
    <string name="education">Education</string>
    <string name="license">License</string>
    <string name="reference">References</string>
    <string name="tax_holding">TAX WITHHOLDING (W4)</string>
    <string name="id">ID</string>
    <string name="update_form">Update Form i-9</string>
    <string name="employment_detail">Employment Details</string>
    <string name="edit"><u>Edit</u></string>
    <string name="profile_heading">Upcoming Appoinment Date and Time Location</string>
    <string name="reschedule_heading">Re-Schedule Appoinment</string>
    <string name="setPreference">Set Preference</string>
    <string name="preference_heading">What kind of schedule you prefer ?</string>
    <string name="work_preference_heading">Which facility setting would you perfer to work in ?</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="old_password">Enter Old Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="reconfirm">Confirm New Password</string>
    <string name="faq_screen">Faq Screen</string>
    <string name="hidden_jobs">Hidden Jobs</string>
    <string name="socail_number">Social Security</string>
    <string name="skip">SKIP AND ADD LATER</string>
    <string name="add_specialty">Add Specialty</string>
    <string name="add_specialty_text">Which Specialty do you have  Experience in ?</string>
    <string name="specaility">Specialty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="experience_heading">Where have you worked in the past ?</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="shift_request">Shift Request</string>
    <string name="add_available">Add Availability</string>
    <string name="add_event">Add Event</string>
    <string name="shifts">Shifts</string>
    <string name="preference">Preference</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open_shift">Open Shifts</string>
    <string name="title_myshift">My Shifts</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_message">Message</string>
    <string name="heading_cancel_shift">Are you sure you want to Cancel your shift ?</string>
    <string name="email_empty">Email Field empty</string>
    <string name="password_empty">Password Field Empty</string>
    <string name="phone_empty">Phone FIeld Empty</string>
    <string name="license_header">In What state are you Licensed?</string>
    <string name="select_state">Select State</string>
    <string name="selected_license">Selected License</string>
    <string name="selected_compat">Selected Compat</string>
    <string name="select_speciality">Select Speciality</string>
    <string name="certification">Certification</string>
    <string name="book_appointment">Book an Appointment</string>
    <string name="select_date">Select the date and time for your interview</string>
    <string name="select_location">Select Location</string>
    <string name="select_time">Select Time Slots</string>
    <string name="select_available_date">Select Available Date</string>
    <string name="book_appointment_summary">Book And View Profile Summary</string>
    <string name="profile_summary">Profile Summary</string>
    <string name="edit_personal_detail">Edit Personal Info.</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="full_name">Name</string>
    <string name="edit_education">Edit Education</string>
    <string name="add_more">Add More</string>
    <string name="add_education">Add Education</string>
    <string name="professiona_detail">Personal Detail</string>
    <string name="professional_detail">Professional Details</string>
    <string name="update">Update</string>
    <string name="upload_ids">Upload IDs</string>
    <string name="my_document">My Documents</string>
    <string name="list_two_text1">"Driver's license issues by a state or outlying possession of the United States, provided it contains a photograph or information such as name, date of birth, gender, height, eye color, and address "</string>
    <string name="list_two_text2">"State ID card issued by a state or outlying possession of the United States, provided it contains a photograph or information such as name, date of birth, gender, height, eye color, and address "</string>
    <string name="list_two_text3">"ID card issued by federal, state or local government agencies or entities, provided it contains  a photograph or information such as name, date of birth, gender, height, eye color, and address "</string>
    <string name="list_two_text4">"School ID card with a photograph "</string>
    <string name="list_two_text5">"Voter's registration card "</string>
    <string name="list_two_text6">U.S. military card or draft record</string>
    <string name="list_two_text7">"Military dependent's ID card "</string>
    <string name="list_two_text8">"U.S. Coast Guard merchant Mariner card "</string>
    <string name="list_two_text9">"Driver's license issues by a Canandian government authority "</string>
    <string name="list_two_text10">"Native American tribal document "</string>
    <string name="list_two_text11">School record or report card</string>
    <string name="list_two_text12">"Clinic, doctor, or hospital record "</string>
    <string name="list_two_text13">Day-care or nursery school record</string>
    <string name="doc_num">Doc Number</string>
    <string name="authority">Authority</string>
    <string name="expiry_date">Expiry Date</string>
</resources>