<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_open_shift">

    <fragment
        android:id="@+id/navigation_open_shift"
        android:name="com.development.allanproject.views.fragment.openshift.OpenShiftFragment"
        android:label="fragment_open_shifts"
        tools:layout="@layout/fragment_open_shifts" />


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.development.allanproject.views.fragment.dashboard.DashboardScreen"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.development.allanproject.views.fragment.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />


    <fragment
        android:id="@+id/navigation_myshift"
        android:name="com.development.allanproject.views.fragment.myshift.MyShiftFragment"
        android:label="@string/title_myshift"
        tools:layout="@layout/fragment_my_shift2" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.development.allanproject.views.fragment.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />


</navigation>
