<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/white"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_back"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/access"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:gravity="center"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/white"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textColor="#4D4D4D"
            android:gravity="center"
            android:text="@string/access_text"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#626262"
            android:text="@string/allow_notification"
            android:layout_marginLeft="20dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#626262"
            android:text="@string/allow_location_access"
            android:layout_marginLeft="20dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/white" />


    </LinearLayout>


</layout>